--- a/main.css
+++ b/main.css
@@ -82,3 +82,121 @@ header {
   .about__info {
     max-width: 550px;
   }
+
+  .form__container {
+    width: 550px;
+    
+  }
+
+  .form {
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+    background-color: #1D263A;
+    color: #fff;
+    padding-top: 115px; 
+    padding-bottom: 115px;
+    text-align: center;
+  }
+
+  .form h1 {
+    font-size: 48px;
+  }
+  
+  .form p {
+    opacity: 0.65;
+    font-size: 18px;
+  }
+
+  .form__group {
+    display: flex;
+    flex-direction: column;
+    text-align: left; 
+  }
+
+  .form form {
+    display: grid;
+    grid-gap: 20px;
+    margin-top: 60px;
+  }
+
+  .form label {
+    font-size: 18px;
+    font-weight: 600px;
+    padding-bottom: 15px;
+  }
+
+  .form input {
+    font-size: 18px;
+    color: #213053;
+    height: 60px;
+    padding: 0 20px 0 20px;
+    border-radius: 15px;
+    border: none;
+  }
+
+  .form select {
+    font-size: 18px;
+    color: #213053;
+    height: 60px;
+    padding: 0 20px 0 20px;
+    border-radius: 15px;
+    border: none
+  }
+
+.form__submit {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+select {
+  appearance: none;
+}
+
+input {
+  outline: none;
+}
+
+button:hover {
+  background-color: #f6980c;
+  box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
+  transition: background-color 0.3 ease-in;
+}
+
+footer {
+ padding: 90px 20px;
+ font-size: 16px;
+ font-weight: 600;
+}
+
+
+.footer_container {
+ display: flex;
+ justify-content: center;
+}
+
+.footer_copyright {
+  margin-top: 40px;
+  text-align: center;
+  opacity: 0.5;
+}
+
+.footer_group {
+ margin-right: 80px;
+}
+
+footer h3 {
+  opacity: 0.7;
+  font-size: 16px;
+  margin-bottom: 30px;
+}
+
+.footer_links {
+ display: flex;
+ flex-direction: column;
+}
+
+.footer_links a {
+ margin-bottom: 15px;
+} 
+
