--- a/main.css
+++ b/main.css
@@ -1,19 +1,19 @@
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    position: sticky;
-    top: 0;
-    background-color: #fff;
-    z-index: 1;
-  }
-
-  body {
-    font-family: 'Raleway', sans-serif;
-    color: #213053;
-    margin: 0;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  position: sticky;
+  top: 0;
+  background-color: #fff;
+  z-index: 1;
+}
+  
+body {
+  font-family: 'Raleway', sans-serif;
+  color: #213053;
+  margin: 0;
+}
 
   .header__logo {
     height: 30px;
@@ -51,7 +51,6 @@ header {
   @keyframes rotation {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
-  
   }
 
   .about__sun-image {
@@ -92,16 +91,179 @@ header {
     border-radius: 20px;
     padding: 20px 25px;
     margin-top: 20px;
-
   }
 
   .about__info {
     max-width: 550px;
   }
 
+  /* проект 10.2 */
+  .features{
+    background-color: #fff;
+    padding: 115px 60px;
+  }
+
+  .cards{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-gap: 50px;
+  }
+
+  .card{
+    padding: 35px 40px 25px 40px;
+    border: solid 1px #D9E4E6;
+    border-radius: 5px;
+  }
+
+  .card p{
+    font-size: 16px;
+    opacity: 0.8;
+    line-height: 22px;
+  }
+
+  .card__logo{
+    height: 100px;
+    width: 100px;
+    background-color: #eaeff9;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 32px;
+    font-weight: 700;
+  }
+
+
+  .features__border{
+    margin-top: 50px;
+    margin-bottom: 50px;
+    border: solid 1px #E6EAF4 ;
+  }
+
+
+  .features__feedback{
+   display: flex;
+    flex-flow: row;
+  }
+
+  .features__box{
+    color: #fff;
+    display: flex;
+   
+  }
+
+  .features__feedback-left{
+   margin-right: 10px;
+  }
+
+  .features__feedback-left h2{
+    font-size: 48px;
+  }
+
+  .features__feedback-left p{
+    font-size: 18px;
+    line-height: 26px;
+    opacity: 0.7;
+  }
+
+  .features__feedback-right{
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+  }
+
+  .features__feedback-right h3{
+    margin-bottom: 20px;
+    font-size: 48px;
+  }
+
+  .features__savings-box{
+    background-color: #dc5e26;
+    box-shadow: 0 6px 0 0 rgb(221 95 38 / 20%);
+    margin-right: 30px;
+    padding: 30px 40px 25px 40px;
+    border-radius: 25px;
+  }
+
+  .features__rate-box{
+    background-color: #1D263A;
+    box-shadow: 0 6px 0 0 rgb(29 38 58 / 20%);
+    padding: 30px 40px 25px 40px;
+    border-radius: 25px;
+  }
+
+  .features__stars  {
+    display: flex;
+    flex-flow: row;
+    width: 100px;
+    justify-content: space-between;
+  }
+ 
+
+  .promo{
+    display: flex;
+    flex-direction: row;
+  }
+
+  .promo__image{
+    width: 50%;
+    background-image: url('img/promo.jpg');
+    background-size: cover;
+    flex-shrink: 0;  
+  }
+
+  .promo__right{
+    width: 50%;
+    background-color: #dd5f26;
+    padding: 160px 60px;
+   }
+
+  .panel{
+    background-color: #fff;
+    padding: 30px 40px;
+    font-size: 20px;
+    line-height: 22px;
+    border-radius: 25px;
+    font-weight: 500;
+  }
+
+  .panel li{
+    opacity: 0.8;
+  }
+
+
+  ul {
+    list-style-type: none;
+    margin:0;
+    padding: 0;
+  }
+
+  li::before{
+    content:'';
+    display: inline-block;
+    height:10px;
+    width: 10px;
+    border-radius:50%;
+    background-color: #ec6b29;
+    margin-right:10px;
+  }
+
+  .button button {
+    background-color: #107b1c;
+    font-size: 18px;
+    margin-top: 20px;
+    padding: 15px 30px;
+    font-weight: 600;
+  }
+
+  .button button i{
+    font-size: 15px;
+    margin-left: 5px;
+  }
+
   .form__container {
     width: 550px;
-    
   }
 
   .form {
@@ -160,131 +322,234 @@ header {
     border: none
   }
 
-.form__submit {
-  font-size: 18px;
-  font-weight: 600;
-}
+  .form__submit {
+    font-size: 18px;
+    font-weight: 600;
+  }
 
-select {
-  appearance: none;
-}
+  select {
+    appearance: none;
+  }
 
-input {
-  outline: none;
-}
+  input {
+   outline: none;
+  }
 
-button:hover {
-  background-color: #f6980c;
-  box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
-  transition: background-color 0.3 ease-in;
-}
+  button:hover {
+    background-color: #f6980c;
+    box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
+    transition: background-color 0.3 ease-in;
+  }
 
-footer {
- padding: 90px 20px;
- font-size: 16px;
- font-weight: 600;
-}
+  footer {
+    padding: 90px 20px;
+    font-size: 16px;
+    font-weight: 600;
+  }
 
 
-.footer_container {
- display: flex;
- justify-content: center;
-}
+  .footer_container {
+    display: flex;
+    justify-content: center;
+  }
 
-.footer_copyright {
-  margin-top: 40px;
-  text-align: center;
-  opacity: 0.5;
-}
+  .footer_copyright {
+    margin-top: 40px;
+    text-align: center;
+    opacity: 0.5;
+  }
 
-.footer_group {
- margin-right: 80px;
-}
+  .footer_group {
+    margin-right: 80px;
+  }
 
-footer h3 {
-  opacity: 0.7;
-  font-size: 16px;
-  margin-bottom: 30px;
-}
+  footer h3 {
+    opacity: 0.7;
+    font-size: 16px;
+    margin-bottom: 30px;
+  }
 
-.footer_links {
- display: flex;
- flex-direction: column;
-}
+  .footer_links {
+    display: flex;
+    flex-direction: column;
+  }
 
-.footer_links a {
- margin-bottom: 15px;
-} 
+  .footer_links a {
+    margin-bottom: 15px;
+  } 
 
 /* Планшеты */
 @media (max-width: 1024px) {
   .about {
-      padding: 115px 20px;
+    padding: 115px 20px;
   }
 
   .about h1 {
-      font-size: 36px;
-      line-height: 40px;
+    font-size: 36px;
+    line-height: 40px;
   }
 
   .about__image {
-      width: 280px;
+    width: 280px;
   }
 
   .about__sun-image {
-      width: 75px;
-      height: 75px;
+    width: 75px;
+    height: 75px;
   }
+
+  .cards{
+    grid-template-columns: auto;
+   } 
+
+   .features__feedback{
+    flex-direction: column;
+   }
+
+   .features__feedback-left{
+    margin-right: 0;
+   }
+
+   .features__feedback-left h2{
+    font-size: 36px;
+   }
+   .features__feedback-right h3{
+    font-size: 36px;
+  }
+
+  .features__savings-box{
+    margin-right: 0;
+    margin-bottom: 30px;
+  }
+
+  .features__box{
+    flex-direction: column;
+ }
+
+  .features__feedback-right{
+    display: block;
+  }
+
+  .promo__image{
+    height: 500px;
+    width: 100%;
+  }
+
+  .promo{
+    flex-direction: column-reverse;
+  }
+
+  .promo__right{
+    padding: 50px 10px;
+    width: 100%;
+  }
+
+
 }
+
 
 /* Мобильные устройства */
 @media (max-width: 720px) {
   header {
-      padding: 10px;
+    padding: 10px;
   }
 
   .header__logo {
-      height: 20px;
+    height: 20px;
   }
 
   header a {
-      margin-right: 10px;
+    margin-right: 10px;
   }
 
   .about {
-      flex-direction: column-reverse;
-      padding: 50px 10px;
+    flex-direction: column-reverse;
+    padding: 50px 10px;
   }
 
   .about h1 {
-      font-size: 36px;
-      line-height: 40px;
+    font-size: 36px;
+    line-height: 40px;
   }
 
   .about__image {
-      width: 280px;
+    width: 280px;
   }
 
   .about__sun-image {
-      width: 75px;
-      height: 75px;
+    width: 75px;
+    height: 75px;
   }
 
   .form {
-      padding: 50px 10px;
+    padding: 50px 10px;
   }
 
   .form h1 {
-      font-size: 36px;
+    font-size: 36px;
   }
 
   footer {
-      padding: 50px 10px;
+    padding: 50px 10px;
   }
 
   .footer__container {
-      flex-direction: column;
+    flex-direction: column;
   }
+
+  .features{
+    padding: 50px 10px;
+  }
+
+  .cards{
+    grid-template-columns: auto;
+  } 
+ 
+  .features__feedback{
+    flex-direction: column;
+  }
+
+  .features__feedback-left{
+    margin-right: 0;
+  }
+
+  .features__feedback-left h2{
+    font-size: 36px;
+  }
+
+  .features__feedback-right h3{
+    font-size: 36px;
+  }
+ 
+  .features__savings-box{
+    margin-right: 0;
+    margin-bottom: 30px;
+  }
+
+  .features__box{
+    flex-direction: column;
+  }
+
+  .features__feedback-right{
+    display: block;
+  }
+
+  .promo__image{
+    height: 500px;
+    width: 100%;
+  }
+
+ .promo{
+    flex-direction: column-reverse;
+  }
+
+ .promo__right{
+    padding: 50px 10px;
+    width: 100%;
+  }
+
+
+
 }
 
 
@@ -297,3 +562,23 @@ footer h3 {
   animation-duration: 2s;
   animation-iteration-count: 1;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
