--- a/main.css
+++ b/main.css
@@ -42,6 +42,16 @@ body {
     padding: 15px;
   }
 
+
+  /* canvas */
+  .orb-canvas{
+    position: absolute;
+    height: 100%;
+    top: 0;
+    right: 0;
+  }
+
+
   .about__image {
     width: 500px;
     /* animation:  2s ease-in-out 1; */
@@ -72,6 +82,7 @@ body {
     background: url('img/back.png') no-repeat;
     background-position: center;
     background-size: cover;
+    position: relative;
   }
 
   .about h1 {
@@ -98,170 +109,171 @@ body {
   }
 
   /* проект 10.2 */
-  .features{
+  .features {
     background-color: #fff;
-    padding: 115px 60px;
+    padding: 115px 60px; 
   }
-
-  .cards{
+  
+  .cards {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
     grid-gap: 50px;
+    grid-template-columns: 1fr 1fr 1fr;
   }
-
-  .card{
+  
+  .card {
     padding: 35px 40px 25px 40px;
-    border: solid 1px #D9E4E6;
+    background: #FFFFFF;
+    border: 1px solid #D9E4E6;
     border-radius: 5px;
   }
-
-  .card p{
-    font-size: 16px;
+  
+  .card p {
     opacity: 0.8;
+    font-size: 16px;
     line-height: 22px;
   }
-
-  .card__logo{
+  
+  .card__logo {
+    font-weight: 700;
+    font-size: 32px;
+    background: #eaeff9;
+    border-radius: 50%;
     height: 100px;
     width: 100px;
-    background-color: #eaeff9;
-    border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 32px;
-    font-weight: 700;
   }
-
-
-  .features__border{
+  
+  .card__logo.yellow {
+    color: #ffb406;
+  }
+  
+  .card__logo.red {
+    color: #ad1714;
+  }
+  
+  .card__logo.green {
+    color: #22a030;
+  }
+  
+  .features__border {
+    width: 100%;
+    border: 1px solid #E6EAF4;
     margin-top: 50px;
     margin-bottom: 50px;
-    border: solid 1px #E6EAF4 ;
   }
-
-
-  .features__feedback{
-   display: flex;
-    flex-flow: row;
-  }
-
-  .features__box{
-    color: #fff;
+  
+  .features__feedback {
     display: flex;
-   
   }
-
-  .features__feedback-left{
-   margin-right: 10px;
+  
+  .features__feedback-left {
+    margin-right: 10px;
   }
-
-  .features__feedback-left h2{
+  
+  .features__feedback-left h2 {
     font-size: 48px;
   }
-
-  .features__feedback-left p{
+  
+  .features__feedback-left p {
     font-size: 18px;
-    line-height: 26px;
     opacity: 0.7;
+    line-height: 26px;
   }
-
-  .features__feedback-right{
+  
+  .features__feedback-right {
     display: flex;
-    flex-flow: row;
     align-items: center;
   }
-
-  .features__feedback-right h3{
-    margin-bottom: 20px;
+  
+  .features__box {
+    border-radius: 25px;
+    padding: 30px 40px 25px 40px;
+    color: white;
+  }
+  
+  .features__box h3 {
     font-size: 48px;
+    margin-top: 0;
+    margin-bottom: 20px;
   }
-
-  .features__savings-box{
+  
+  .features__savings-box {
     background-color: #dc5e26;
-    box-shadow: 0 6px 0 0 rgb(221 95 38 / 20%);
+    box-shadow: 0 6px 0 rgb(221 95 38 / 20%);
     margin-right: 30px;
-    padding: 30px 40px 25px 40px;
-    border-radius: 25px;
   }
-
-  .features__rate-box{
+  
+  .features__rate-box {
     background-color: #1D263A;
-    box-shadow: 0 6px 0 0 rgb(29 38 58 / 20%);
-    padding: 30px 40px 25px 40px;
-    border-radius: 25px;
+    box-shadow: 0 6px 0 rgb(29 38 58 / 20%);
   }
-
-  .features__stars  {
+  
+  .stars {
+    color: #ff7039;
+  }
+  
+  
+  .promo {
     display: flex;
-    flex-flow: row;
-    width: 100px;
-    justify-content: space-between;
   }
- 
-
-  .promo{
-    display: flex;
-    flex-direction: row;
-  }
-
-  .promo__image{
+  
+  .promo__image {
+    background-image: url(img/promo.jpg);
     width: 50%;
-    background-image: url('img/promo.jpg');
+    flex-shrink: 0;
     background-size: cover;
-    flex-shrink: 0;  
+    background-position: center;
   }
-
-  .promo__right{
-    width: 50%;
-    background-color: #dd5f26;
+  
+  .promo__right {
+    background: #dd5f26;
     padding: 160px 60px;
-   }
-
-  .panel{
-    background-color: #fff;
-    padding: 30px 40px;
-    font-size: 20px;
-    line-height: 22px;
-    border-radius: 25px;
-    font-weight: 500;
   }
-
-  .panel li{
+  
+  .promo__text {
+    background-color: white;
+    padding: 30px 40px;
+    border-radius: 25px;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 26px;
+  }
+  
+  .promo__text p::before {
+    content: '';
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #ec6b29;
+    margin-right: 10px;
+  }
+  
+  .promo__text p {
     opacity: 0.8;
   }
-
-
-  ul {
-    list-style-type: none;
-    margin:0;
-    padding: 0;
-  }
-
-  li::before{
-    content:'';
-    display: inline-block;
-    height:10px;
-    width: 10px;
-    border-radius:50%;
-    background-color: #ec6b29;
-    margin-right:10px;
-  }
-
-  .button button {
+  
+  .promo__text button {
     background-color: #107b1c;
-    font-size: 18px;
     margin-top: 20px;
-    padding: 15px 30px;
     font-weight: 600;
+    font-size: 18px;
+    box-shadow: 0 16px 36px rgb(16 122 28 / 30%);
+    padding: 15px 30px;
   }
-
-  .button button i{
+  
+  .promo__button-wrap {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .promo__text button i {
     font-size: 15px;
     margin-left: 5px;
   }
-
+  
   .form__container {
     width: 550px;
   }
@@ -398,53 +410,6 @@ body {
     height: 75px;
   }
 
-  .cards{
-    grid-template-columns: auto;
-   } 
-
-   .features__feedback{
-    flex-direction: column;
-   }
-
-   .features__feedback-left{
-    margin-right: 0;
-   }
-
-   .features__feedback-left h2{
-    font-size: 36px;
-   }
-   .features__feedback-right h3{
-    font-size: 36px;
-  }
-
-  .features__savings-box{
-    margin-right: 0;
-    margin-bottom: 30px;
-  }
-
-  .features__box{
-    flex-direction: column;
- }
-
-  .features__feedback-right{
-    display: block;
-  }
-
-  .promo__image{
-    height: 500px;
-    width: 100%;
-  }
-
-  .promo{
-    flex-direction: column-reverse;
-  }
-
-  .promo__right{
-    padding: 50px 10px;
-    width: 100%;
-  }
-
-
 }
 
 
@@ -497,58 +462,48 @@ body {
     flex-direction: column;
   }
 
-  .features{
-    padding: 50px 10px;
-  }
-
-  .cards{
-    grid-template-columns: auto;
-  } 
- 
-  .features__feedback{
-    flex-direction: column;
-  }
-
-  .features__feedback-left{
-    margin-right: 0;
-  }
-
-  .features__feedback-left h2{
-    font-size: 36px;
-  }
-
-  .features__feedback-right h3{
-    font-size: 36px;
-  }
- 
-  .features__savings-box{
-    margin-right: 0;
-    margin-bottom: 30px;
-  }
-
-  .features__box{
-    flex-direction: column;
-  }
-
-  .features__feedback-right{
-    display: block;
-  }
-
-  .promo__image{
-    height: 500px;
-    width: 100%;
-  }
-
- .promo{
+  .promo {
     flex-direction: column-reverse;
   }
 
- .promo__right{
+  .promo__right {
     padding: 50px 10px;
-    width: 100%;
   }
 
+  .promo__image {
+    width: 100%;
+    height: 500px;
+  }
 
+  .features__feedback {
+    flex-direction: column;
+  }
+
+  .features__feedback-left {
+    margin-right: 0;
+  }
+  
+  .features__feedback-left h2, .features__box h3 {
+    font-size: 36px;
+  }
+
+  .features__feedback-right {
+    flex-direction: column;
+    align-items: initial;
+  }
+
+  .features__savings-box {
+    margin-right: 0;
+    margin-bottom: 30px;
+  }
+ 
+  .cards {
+    grid-template-columns: auto;
+  }
+
+  .features {
+    padding: 50px 10px;
+  }
 
 }
 
